--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "esbuild": "^0.23.1",
+    "fs": "0.0.1-security",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.441.0",
+    "mdx-bundler": "^10.0.3",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
