--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-prism-plus": "^0.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
